--- a/TFG_DAW/frontend/package.json
+++ b/TFG_DAW/frontend/package.json
@@ -22,6 +22,7 @@
     "@angular/ssr": "^19.2.5",
     "bootstrap": "^5.3.5",
     "bootstrap-icons": "^1.11.3",
+    "ethers": "^6.14.0",
     "express": "^4.18.2",
     "frontend": "file:",
     "rxjs": "~7.8.0",
