--- a/TFG_DAW/frontend/package.json
+++ b/TFG_DAW/frontend/package.json
@@ -11,20 +11,27 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/cdk": "^19.2.15",
     "@angular/common": "^19.2.0",
     "@angular/compiler": "^19.2.0",
     "@angular/core": "^19.2.0",
     "@angular/forms": "^19.2.0",
+    "@angular/material": "^19.2.15",
     "@angular/platform-browser": "^19.2.0",
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/platform-server": "^19.2.0",
     "@angular/router": "^19.2.0",
     "@angular/ssr": "^19.2.5",
+    "@fullcalendar/angular": "^6.1.17",
+    "@fullcalendar/daygrid": "^6.1.17",
+    "@fullcalendar/interaction": "^6.1.17",
+    "@fullcalendar/timegrid": "^6.1.17",
     "bootstrap": "^5.3.5",
     "bootstrap-icons": "^1.11.3",
     "ethers": "^6.14.0",
     "express": "^4.18.2",
     "frontend": "file:",
+    "moment": "^2.30.1",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.21.0",
     "tslib": "^2.3.0",
